Compiler/parser.output
Терминалы не используются в грамматике

   UNION
   REVERSE


Грамматика

    0 $accept: prog $end

    1 prog: globallist

    2 globallist: global global_tail

    3 global_tail: %empty
    4            | globallist

    5 global: struct_declaration
    6       | function
    7       | declaration

    8 function: FUNC VARIABLE VARIABLE marker_openblock '(' paramlist ')' '{' stmtlist '}' marker_closeblock

    9 paramlist: declaration paramlist
   10          | %empty

   11 struct_declaration: STRUCT VARIABLE marker_openblock '{' declaration_list '}' marker_closeblock

   12 declaration_list: sdeclaration declarationlist_tail

   13 declarationlist_tail: %empty
   14                     | declaration_list

   15 sdeclaration: VARIABLE VARIABLE ';'

   16 stmtlist: statement stmtlist_tail

   17 stmtlist_tail: %empty
   18              | stmtlist

   19 statement: exp ';'
   20          | assign ';'
   21          | declaration ';'
   22          | cond_stmt
   23          | for_stmt
   24          | while_stmt
   25          | do_stmt
   26          | block
   27          | BREAK ';'
   28          | CONTINUE ';'
   29          | exp error
   30          | assign error
   31          | VARIABLE ':'
   32          | GOTO VARIABLE ';'

   33 declaration: VARIABLE VARIABLE
   34            | VARIABLE VARIABLE '[' exp ']'

   35 assign: refference '=' exp

   36 refference: structrefference
   37           | arrayrefference
   38           | VARIABLE

   39 structrefference: VARIABLE '.' VARIABLE

   40 arrayrefference: VARIABLE '[' exp ']'

   41 block: '{' marker_openblock stmtlist marker_closeblock '}'

   42 incycle: %empty

   43 outcycle: %empty

   44 for_stmt: FOR '(' statement exp ';' statement ')' incycle statement outcycle

   45 while_stmt: WHILE '(' exp ')' incycle statement outcycle

   46 do_stmt: DO incycle statement outcycle WHILE '(' exp ')' outcycle

   47 marker_openblock: %empty

   48 marker_closeblock: %empty

   49 cond_stmt: IF '(' exp ')' statement
   50          | IF '(' exp ')' statement ELSE statement

   51 exp: %empty
   52    | '!' exp
   53    | exp BOOLOP exp
   54    | exp CMP exp
   55    | exp '+' exp
   56    | exp '-' exp
   57    | exp '*' exp
   58    | exp '/' exp
   59    | '(' exp ')'
   60    | INTCONST
   61    | FLOATCONST
   62    | STRCONST
   63    | refference


Терминальные символы с правилами, в которых они появляются

$end (0) 0
'!' (33) 52
'(' (40) 8 44 45 46 49 50 59
')' (41) 8 44 45 46 49 50 59
'*' (42) 57
'+' (43) 55
'-' (45) 56
'.' (46) 39
'/' (47) 58
':' (58) 31
';' (59) 15 19 20 21 27 28 32 44
'=' (61) 35
'[' (91) 34 40
']' (93) 34 40
'{' (123) 8 11 41
'}' (125) 8 11 41
error (256) 29 30
INTCONST (258) 60
VARIABLE (259) 8 11 15 31 32 33 34 38 39 40
STRCONST (260) 62
FLOATCONST (261) 61
IF (262) 49 50
ELSE (263) 50
DO (264) 46
WHILE (265) 45 46
FOR (266) 44
BREAK (267) 27
CONTINUE (268) 28
STRUCT (269) 11
GOTO (270) 32
FUNC (271) 8
UNION (272)
IFX (273)
CMP (274) 54
BOOLOP (275) 53
REVERSE (276)


Нетерминальные символы с правилами, в которых они появляются

$accept (37)
    налево: 0
prog (38)
    налево: 1, направо: 0
globallist (39)
    налево: 2, направо: 1 4
global_tail (40)
    налево: 3 4, направо: 2
global (41)
    налево: 5 6 7, направо: 2
function (42)
    налево: 8, направо: 6
paramlist (43)
    налево: 9 10, направо: 8 9
struct_declaration (44)
    налево: 11, направо: 5
declaration_list (45)
    налево: 12, направо: 11 14
declarationlist_tail (46)
    налево: 13 14, направо: 12
sdeclaration (47)
    налево: 15, направо: 12
stmtlist (48)
    налево: 16, направо: 8 18 41
stmtlist_tail (49)
    налево: 17 18, направо: 16
statement (50)
    налево: 19 20 21 22 23 24 25 26 27 28 29 30 31 32, направо:
    16 44 45 46 49 50
declaration (51)
    налево: 33 34, направо: 7 9 21
assign (52)
    налево: 35, направо: 20 30
refference (53)
    налево: 36 37 38, направо: 35 63
structrefference (54)
    налево: 39, направо: 36
arrayrefference (55)
    налево: 40, направо: 37
block (56)
    налево: 41, направо: 26
incycle (57)
    налево: 42, направо: 44 45 46
outcycle (58)
    налево: 43, направо: 44 45 46
for_stmt (59)
    налево: 44, направо: 23
while_stmt (60)
    налево: 45, направо: 24
do_stmt (61)
    налево: 46, направо: 25
marker_openblock (62)
    налево: 47, направо: 8 11 41
marker_closeblock (63)
    налево: 48, направо: 8 11 41
cond_stmt (64)
    налево: 49 50, направо: 22
exp (65)
    налево: 51 52 53 54 55 56 57 58 59 60 61 62 63, направо:
    19 29 34 35 40 44 45 46 49 50 52 53 54 55 56 57 58 59


State 0

    0 $accept: . prog $end

    VARIABLE  сдвиг, и переход в состояние 1
    STRUCT    сдвиг, и переход в состояние 2
    FUNC      сдвиг, и переход в состояние 3

    prog                переход в состояние 4
    globallist          переход в состояние 5
    global              переход в состояние 6
    function            переход в состояние 7
    struct_declaration  переход в состояние 8
    declaration         переход в состояние 9


State 1

   33 declaration: VARIABLE . VARIABLE
   34            | VARIABLE . VARIABLE '[' exp ']'

    VARIABLE  сдвиг, и переход в состояние 10


State 2

   11 struct_declaration: STRUCT . VARIABLE marker_openblock '{' declaration_list '}' marker_closeblock

    VARIABLE  сдвиг, и переход в состояние 11


State 3

    8 function: FUNC . VARIABLE VARIABLE marker_openblock '(' paramlist ')' '{' stmtlist '}' marker_closeblock

    VARIABLE  сдвиг, и переход в состояние 12


State 4

    0 $accept: prog . $end

    $end  сдвиг, и переход в состояние 13


State 5

    1 prog: globallist .

    $default  вывод с использованием правила 1 (prog)


State 6

    2 globallist: global . global_tail

    VARIABLE  сдвиг, и переход в состояние 1
    STRUCT    сдвиг, и переход в состояние 2
    FUNC      сдвиг, и переход в состояние 3

    $default  вывод с использованием правила 3 (global_tail)

    globallist          переход в состояние 14
    global_tail         переход в состояние 15
    global              переход в состояние 6
    function            переход в состояние 7
    struct_declaration  переход в состояние 8
    declaration         переход в состояние 9


State 7

    6 global: function .

    $default  вывод с использованием правила 6 (global)


State 8

    5 global: struct_declaration .

    $default  вывод с использованием правила 5 (global)


State 9

    7 global: declaration .

    $default  вывод с использованием правила 7 (global)


State 10

   33 declaration: VARIABLE VARIABLE .
   34            | VARIABLE VARIABLE . '[' exp ']'

    '['  сдвиг, и переход в состояние 16

    $default  вывод с использованием правила 33 (declaration)


State 11

   11 struct_declaration: STRUCT VARIABLE . marker_openblock '{' declaration_list '}' marker_closeblock

    $default  вывод с использованием правила 47 (marker_openblock)

    marker_openblock  переход в состояние 17


State 12

    8 function: FUNC VARIABLE . VARIABLE marker_openblock '(' paramlist ')' '{' stmtlist '}' marker_closeblock

    VARIABLE  сдвиг, и переход в состояние 18


State 13

    0 $accept: prog $end .

    $default  принять


State 14

    4 global_tail: globallist .

    $default  вывод с использованием правила 4 (global_tail)


State 15

    2 globallist: global global_tail .

    $default  вывод с использованием правила 2 (globallist)


State 16

   34 declaration: VARIABLE VARIABLE '[' . exp ']'

    INTCONST    сдвиг, и переход в состояние 19
    VARIABLE    сдвиг, и переход в состояние 20
    STRCONST    сдвиг, и переход в состояние 21
    FLOATCONST  сдвиг, и переход в состояние 22
    '!'         сдвиг, и переход в состояние 23
    '('         сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 51 (exp)

    refference        переход в состояние 25
    structrefference  переход в состояние 26
    arrayrefference   переход в состояние 27
    exp               переход в состояние 28


State 17

   11 struct_declaration: STRUCT VARIABLE marker_openblock . '{' declaration_list '}' marker_closeblock

    '{'  сдвиг, и переход в состояние 29


State 18

    8 function: FUNC VARIABLE VARIABLE . marker_openblock '(' paramlist ')' '{' stmtlist '}' marker_closeblock

    $default  вывод с использованием правила 47 (marker_openblock)

    marker_openblock  переход в состояние 30


State 19

   60 exp: INTCONST .

    $default  вывод с использованием правила 60 (exp)


State 20

   38 refference: VARIABLE .
   39 structrefference: VARIABLE . '.' VARIABLE
   40 arrayrefference: VARIABLE . '[' exp ']'

    '['  сдвиг, и переход в состояние 31
    '.'  сдвиг, и переход в состояние 32

    $default  вывод с использованием правила 38 (refference)


State 21

   62 exp: STRCONST .

    $default  вывод с использованием правила 62 (exp)


State 22

   61 exp: FLOATCONST .

    $default  вывод с использованием правила 61 (exp)


State 23

   52 exp: '!' . exp

    INTCONST    сдвиг, и переход в состояние 19
    VARIABLE    сдвиг, и переход в состояние 20
    STRCONST    сдвиг, и переход в состояние 21
    FLOATCONST  сдвиг, и переход в состояние 22
    '!'         сдвиг, и переход в состояние 23
    '('         сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 51 (exp)

    refference        переход в состояние 25
    structrefference  переход в состояние 26
    arrayrefference   переход в состояние 27
    exp               переход в состояние 33


State 24

   59 exp: '(' . exp ')'

    INTCONST    сдвиг, и переход в состояние 19
    VARIABLE    сдвиг, и переход в состояние 20
    STRCONST    сдвиг, и переход в состояние 21
    FLOATCONST  сдвиг, и переход в состояние 22
    '!'         сдвиг, и переход в состояние 23
    '('         сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 51 (exp)

    refference        переход в состояние 25
    structrefference  переход в состояние 26
    arrayrefference   переход в состояние 27
    exp               переход в состояние 34


State 25

   63 exp: refference .

    $default  вывод с использованием правила 63 (exp)


State 26

   36 refference: structrefference .

    $default  вывод с использованием правила 36 (refference)


State 27

   37 refference: arrayrefference .

    $default  вывод с использованием правила 37 (refference)


State 28

   34 declaration: VARIABLE VARIABLE '[' exp . ']'
   53 exp: exp . BOOLOP exp
   54    | exp . CMP exp
   55    | exp . '+' exp
   56    | exp . '-' exp
   57    | exp . '*' exp
   58    | exp . '/' exp

    CMP     сдвиг, и переход в состояние 35
    '+'     сдвиг, и переход в состояние 36
    '-'     сдвиг, и переход в состояние 37
    '*'     сдвиг, и переход в состояние 38
    '/'     сдвиг, и переход в состояние 39
    BOOLOP  сдвиг, и переход в состояние 40
    ']'     сдвиг, и переход в состояние 41


State 29

   11 struct_declaration: STRUCT VARIABLE marker_openblock '{' . declaration_list '}' marker_closeblock

    VARIABLE  сдвиг, и переход в состояние 42

    declaration_list  переход в состояние 43
    sdeclaration      переход в состояние 44


State 30

    8 function: FUNC VARIABLE VARIABLE marker_openblock . '(' paramlist ')' '{' stmtlist '}' marker_closeblock

    '('  сдвиг, и переход в состояние 45


State 31

   40 arrayrefference: VARIABLE '[' . exp ']'

    INTCONST    сдвиг, и переход в состояние 19
    VARIABLE    сдвиг, и переход в состояние 20
    STRCONST    сдвиг, и переход в состояние 21
    FLOATCONST  сдвиг, и переход в состояние 22
    '!'         сдвиг, и переход в состояние 23
    '('         сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 51 (exp)

    refference        переход в состояние 25
    structrefference  переход в состояние 26
    arrayrefference   переход в состояние 27
    exp               переход в состояние 46


State 32

   39 structrefference: VARIABLE '.' . VARIABLE

    VARIABLE  сдвиг, и переход в состояние 47


State 33

   52 exp: '!' exp .
   53    | exp . BOOLOP exp
   54    | exp . CMP exp
   55    | exp . '+' exp
   56    | exp . '-' exp
   57    | exp . '*' exp
   58    | exp . '/' exp

    $default  вывод с использованием правила 52 (exp)


State 34

   53 exp: exp . BOOLOP exp
   54    | exp . CMP exp
   55    | exp . '+' exp
   56    | exp . '-' exp
   57    | exp . '*' exp
   58    | exp . '/' exp
   59    | '(' exp . ')'

    CMP     сдвиг, и переход в состояние 35
    '+'     сдвиг, и переход в состояние 36
    '-'     сдвиг, и переход в состояние 37
    '*'     сдвиг, и переход в состояние 38
    '/'     сдвиг, и переход в состояние 39
    BOOLOP  сдвиг, и переход в состояние 40
    ')'     сдвиг, и переход в состояние 48


State 35

   54 exp: exp CMP . exp

    INTCONST    сдвиг, и переход в состояние 19
    VARIABLE    сдвиг, и переход в состояние 20
    STRCONST    сдвиг, и переход в состояние 21
    FLOATCONST  сдвиг, и переход в состояние 22
    '!'         сдвиг, и переход в состояние 23
    '('         сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 51 (exp)

    refference        переход в состояние 25
    structrefference  переход в состояние 26
    arrayrefference   переход в состояние 27
    exp               переход в состояние 49


State 36

   55 exp: exp '+' . exp

    INTCONST    сдвиг, и переход в состояние 19
    VARIABLE    сдвиг, и переход в состояние 20
    STRCONST    сдвиг, и переход в состояние 21
    FLOATCONST  сдвиг, и переход в состояние 22
    '!'         сдвиг, и переход в состояние 23
    '('         сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 51 (exp)

    refference        переход в состояние 25
    structrefference  переход в состояние 26
    arrayrefference   переход в состояние 27
    exp               переход в состояние 50


State 37

   56 exp: exp '-' . exp

    INTCONST    сдвиг, и переход в состояние 19
    VARIABLE    сдвиг, и переход в состояние 20
    STRCONST    сдвиг, и переход в состояние 21
    FLOATCONST  сдвиг, и переход в состояние 22
    '!'         сдвиг, и переход в состояние 23
    '('         сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 51 (exp)

    refference        переход в состояние 25
    structrefference  переход в состояние 26
    arrayrefference   переход в состояние 27
    exp               переход в состояние 51


State 38

   57 exp: exp '*' . exp

    INTCONST    сдвиг, и переход в состояние 19
    VARIABLE    сдвиг, и переход в состояние 20
    STRCONST    сдвиг, и переход в состояние 21
    FLOATCONST  сдвиг, и переход в состояние 22
    '!'         сдвиг, и переход в состояние 23
    '('         сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 51 (exp)

    refference        переход в состояние 25
    structrefference  переход в состояние 26
    arrayrefference   переход в состояние 27
    exp               переход в состояние 52


State 39

   58 exp: exp '/' . exp

    INTCONST    сдвиг, и переход в состояние 19
    VARIABLE    сдвиг, и переход в состояние 20
    STRCONST    сдвиг, и переход в состояние 21
    FLOATCONST  сдвиг, и переход в состояние 22
    '!'         сдвиг, и переход в состояние 23
    '('         сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 51 (exp)

    refference        переход в состояние 25
    structrefference  переход в состояние 26
    arrayrefference   переход в состояние 27
    exp               переход в состояние 53


State 40

   53 exp: exp BOOLOP . exp

    INTCONST    сдвиг, и переход в состояние 19
    VARIABLE    сдвиг, и переход в состояние 20
    STRCONST    сдвиг, и переход в состояние 21
    FLOATCONST  сдвиг, и переход в состояние 22
    '!'         сдвиг, и переход в состояние 23
    '('         сдвиг, и переход в состояние 24

    $default  вывод с использованием правила 51 (exp)

    refference        переход в состояние 25
    structrefference  переход в состояние 26
    arrayrefference   переход в состояние 27
    exp               переход в состояние 54


State 41

   34 declaration: VARIABLE VARIABLE '[' exp ']' .

    $default  вывод с использованием правила 34 (declaration)


State 42

   15 sdeclaration: VARIABLE . VARIABLE ';'

    VARIABLE  сдвиг, и переход в состояние 55


State 43

   11 struct_declaration: STRUCT VARIABLE marker_openblock '{' declaration_list . '}' marker_closeblock

    '}'  сдвиг, и переход в состояние 56


State 44

   12 declaration_list: sdeclaration . declarationlist_tail

    VARIABLE  сдвиг, и переход в состояние 42

    $default  вывод с использованием правила 13 (declarationlist_tail)

    declaration_list      переход в состояние 57
    declarationlist_tail  переход в состояние 58
    sdeclaration          переход в состояние 44


State 45

    8 function: FUNC VARIABLE VARIABLE marker_openblock '(' . paramlist ')' '{' stmtlist '}' marker_closeblock

    VARIABLE  сдвиг, и переход в состояние 1

    $default  вывод с использованием правила 10 (paramlist)

    paramlist    переход в состояние 59
    declaration  переход в состояние 60


State 46

   40 arrayrefference: VARIABLE '[' exp . ']'
   53 exp: exp . BOOLOP exp
   54    | exp . CMP exp
   55    | exp . '+' exp
   56    | exp . '-' exp
   57    | exp . '*' exp
   58    | exp . '/' exp

    CMP     сдвиг, и переход в состояние 35
    '+'     сдвиг, и переход в состояние 36
    '-'     сдвиг, и переход в состояние 37
    '*'     сдвиг, и переход в состояние 38
    '/'     сдвиг, и переход в состояние 39
    BOOLOP  сдвиг, и переход в состояние 40
    ']'     сдвиг, и переход в состояние 61


State 47

   39 structrefference: VARIABLE '.' VARIABLE .

    $default  вывод с использованием правила 39 (structrefference)


State 48

   59 exp: '(' exp ')' .

    $default  вывод с использованием правила 59 (exp)


State 49

   53 exp: exp . BOOLOP exp
   54    | exp . CMP exp
   54    | exp CMP exp .
   55    | exp . '+' exp
   56    | exp . '-' exp
   57    | exp . '*' exp
   58    | exp . '/' exp

    '+'     сдвиг, и переход в состояние 36
    '-'     сдвиг, и переход в состояние 37
    '*'     сдвиг, и переход в состояние 38
    '/'     сдвиг, и переход в состояние 39
    BOOLOP  сдвиг, и переход в состояние 40

    CMP  ошибка (неассоциативная)

    $default  вывод с использованием правила 54 (exp)


State 50

   53 exp: exp . BOOLOP exp
   54    | exp . CMP exp
   55    | exp . '+' exp
   55    | exp '+' exp .
   56    | exp . '-' exp
   57    | exp . '*' exp
   58    | exp . '/' exp

    '*'     сдвиг, и переход в состояние 38
    '/'     сдвиг, и переход в состояние 39
    BOOLOP  сдвиг, и переход в состояние 40

    $default  вывод с использованием правила 55 (exp)


State 51

   53 exp: exp . BOOLOP exp
   54    | exp . CMP exp
   55    | exp . '+' exp
   56    | exp . '-' exp
   56    | exp '-' exp .
   57    | exp . '*' exp
   58    | exp . '/' exp

    '*'     сдвиг, и переход в состояние 38
    '/'     сдвиг, и переход в состояние 39
    BOOLOP  сдвиг, и переход в состояние 40

    $default  вывод с использованием правила 56 (exp)


State 52

   53 exp: exp . BOOLOP exp
   54    | exp . CMP exp
   55    | exp . '+' exp
   56    | exp . '-' exp
   57    | exp . '*' exp
   57    | exp '*' exp .
   58    | exp . '/' exp

    BOOLOP  сдвиг, и переход в состояние 40

    $default  вывод с использованием правила 57 (exp)


State 53

   53 exp: exp . BOOLOP exp
   54    | exp . CMP exp
   55    | exp . '+' exp
   56    | exp . '-' exp
   57    | exp . '*' exp
   58    | exp . '/' exp
   58    | exp '/' exp .

    BOOLOP  сдвиг, и переход в состояние 40

    $default  вывод с использованием правила 58 (exp)


State 54

   53 exp: exp . BOOLOP exp
   53    | exp BOOLOP exp .
   54    | exp . CMP exp
   55    | exp . '+' exp
   56    | exp . '-' exp
   57    | exp . '*' exp
   58    | exp . '/' exp

    $default  вывод с использованием правила 53 (exp)


State 55

   15 sdeclaration: VARIABLE VARIABLE . ';'

    ';'  сдвиг, и переход в состояние 62


State 56

   11 struct_declaration: STRUCT VARIABLE marker_openblock '{' declaration_list '}' . marker_closeblock

    $default  вывод с использованием правила 48 (marker_closeblock)

    marker_closeblock  переход в состояние 63


State 57

   14 declarationlist_tail: declaration_list .

    $default  вывод с использованием правила 14 (declarationlist_tail)


State 58

   12 declaration_list: sdeclaration declarationlist_tail .

    $default  вывод с использованием правила 12 (declaration_list)


State 59

    8 function: FUNC VARIABLE VARIABLE marker_openblock '(' paramlist . ')' '{' stmtlist '}' marker_closeblock

    ')'  сдвиг, и переход в состояние 64


State 60

    9 paramlist: declaration . paramlist

    VARIABLE  сдвиг, и переход в состояние 1

    $default  вывод с использованием правила 10 (paramlist)

    paramlist    переход в состояние 65
    declaration  переход в состояние 60


State 61

   40 arrayrefference: VARIABLE '[' exp ']' .

    $default  вывод с использованием правила 40 (arrayrefference)


State 62

   15 sdeclaration: VARIABLE VARIABLE ';' .

    $default  вывод с использованием правила 15 (sdeclaration)


State 63

   11 struct_declaration: STRUCT VARIABLE marker_openblock '{' declaration_list '}' marker_closeblock .

    $default  вывод с использованием правила 11 (struct_declaration)


State 64

    8 function: FUNC VARIABLE VARIABLE marker_openblock '(' paramlist ')' . '{' stmtlist '}' marker_closeblock

    '{'  сдвиг, и переход в состояние 66


State 65

    9 paramlist: declaration paramlist .

    $default  вывод с использованием правила 9 (paramlist)


State 66

    8 function: FUNC VARIABLE VARIABLE marker_openblock '(' paramlist ')' '{' . stmtlist '}' marker_closeblock
